--- a/chunk_includes/shared_intro2.html
+++ b/chunk_includes/shared_intro2.html
@@ -5,9 +5,9 @@
 </p>
 
 <p>
-La sfârșitul fiecărui fragment de propoziție, vi se vor da două cuvinte: verbe (precum "are" sau "au"). Alegeți continuarea care vi se pare cea mai potrivită.  
+La sfârșitul fiecărui fragment de propoziție, vi se vor da pattru cuvinte: verbe (precum "are" sau "au"). Alegeți continuarea care vi se pare cea mai potrivită.  
 <p>
-Pentru a alege răspunsul din stânga, apăsați 's' pe tastatură. Pentru a alege răspunsul din dreapta, apăsați 'k'. Nu puteți folosi mouse-ul pentru a răspunde.</p>
+Pentru a alege primul răspuns, apăsați 'a' pe tastatură. Pentru a alege răspunsul al doilea, apăsați 'b'. Pentru a alege răspunsul al treilea, apăsați 'c'. Pentru a alege ultimul răspuns, apăsați 'd'. Nu puteți folosi mouse-ul pentru a răspunde.</p>
 
 </tr>
 <p></p>
@@ -16,6 +16,6 @@ Pentru a alege răspunsul din stânga, apăsați 's' pe tastatură. Pentru a ale
 </tr>
   <p></p>
 
-  <td>Ce tastă apăsați pentru a alege răspunsul din dreapta?</td><td><br><input name="keychoice" type="radio" value="j" class="obligatory" id="j" /><label for="j">s</label>
-<input name="keychoice" type="radio" value="f" id="f"/><label for="f">k</label>
+  <td>Ce tastă apăsați pentru a alege răspunsul al doilea?</td><td><br><input name="keychoice" type="radio" value="b" class="obligatory" id="b" /><label for="b">b</label>
+<input name="keychoice" type="radio" value="d" id="d"/><label for="d">d</label>
 </tr>
